Align cm-page-handles  correctly

--- a/src/components/cm-page/cm-page.scss
+++ b/src/components/cm-page/cm-page.scss
@@ -20,6 +20,7 @@ header {
 		width: 100%;
 		position: relative;
 		top: 1px;
+		left: -8px;
 
 		flex-direction: row;
 
